@@ -1,10 +1,7 @@
 plugins {
     id 'application'
-	id "org.panteleyev.jpackageplugin" version "1.3.1"
-}
-
-repositories {
-    mavenCentral()
+    id "org.panteleyev.jpackageplugin" version "1.3.1"
+    id 'OpenSceneBuilder.java-conventions'
 }
 
 String platformName;
@@ -19,16 +16,16 @@ if(platformNameRaw.contains("windows")) {
     platformName = ""
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+def openJfxVersion = "17.0.0.1"
 
-    implementation "org.openjfx:javafx-base:16:${platformName}"
-    implementation "org.openjfx:javafx-fxml:16:${platformName}"
-    implementation "org.openjfx:javafx-controls:16:${platformName}"
-    implementation "org.openjfx:javafx-graphics:16:${platformName}"
-    implementation "org.openjfx:javafx-web:16:${platformName}"
-    implementation "org.openjfx:javafx-media:16:${platformName}"
-    implementation "org.openjfx:javafx-swing:16:${platformName}"
+dependencies {
+    implementation "org.openjfx:javafx-base:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-fxml:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-controls:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-graphics:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-web:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-media:${openJfxVersion}:${platformName}"
+    implementation "org.openjfx:javafx-swing:${openJfxVersion}:${platformName}"
 
     implementation project(":scenebuilder-kit")
 }
@@ -38,30 +35,23 @@ application {
     mainClass = 'com.oracle.javafx.scenebuilder.app.SceneBuilderApp'
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
 task copyDependencies(type:Copy) {
-    from(configurations.runtimeClasspath).into("$buildDir/jmods")
+    from(configurations.runtimeClasspath).into("$buildDir/jmods").exclude("javafx-*-${openJfxVersion}.jar")
 }
 
 task copyJar(type:Copy) {
     from(tasks.jar).into("$buildDir/jmods")
 }
 
-var versionRaw = java.lang.Runtime.version().version();
-var version = "${versionRaw.get(0)}.${versionRaw.get(1)}.${versionRaw.get(2)}"
+// TODO: 適切なバージョンがまだない
+//var versionRaw = java.lang.Runtime.version().version();
+//var version = "${versionRaw.get(0)}.${versionRaw.get(1)}.${versionRaw.get(2)}"
+var version = "17.0.0";
 
 tasks.jpackage {
     dependsOn("build", "copyDependencies", "copyJar")
 
     appName = "OpenSceneBuilder"
-    // 適切なバージョンがまだない
     appVersion = version
     vendor = "OpenSceneBuilder project"
     copyright = "Copyright (c) 2021, OpenSceneBuilder project and/or its affiliates."
@@ -71,7 +61,12 @@ tasks.jpackage {
     module = "scenebuilder.app/com.oracle.javafx.scenebuilder.app.SceneBuilderApp"
     modulePaths = ["$buildDir/jmods"]
     destination = "$buildDir/dist"
-    javaOptions = ["-Dfile.encoding=UTF-8"]
+    javaOptions = [
+        "-XX:+UseZGC",
+        "-Xmx1024m",
+        "-Xms1024m",
+        "-Dfile.encoding=UTF-8"
+    ]
 
     windows {
         winDirChooser = true
